cel-rs-macros/tests/ui/type_mismatch.rs
use cel_rs_macros::expression;

fn main() {
    expression! {
        "Hello" + 32.0
    };
}
